# dog-api

./: .gitignore  Makefile  README.md  config.py  env.example  env.localhost.example  main.py  nginx.conf  openapi.py  pyproject.toml  reload-nginx.sh  requirements.txt  server.py
app/: app_config.py  main.py  models.py  openapi.py
app/middleware/: cors.py
app/routes/: breeds.py  images.py
app/services/: breed_service.py
scripts/: dev.py
tests/: test_breeds.py
