[project]
name = "dog-api"
version = "1.0.0"
description = "API for accessing dog breed images and information"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
]

[project.scripts]
dev = "main:main"
start = "uvicorn.app.main:app"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

